--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <source src="HappyNewYear-ABBA.mp3" type="audio/mpeg">
       </audio>
     <script src="script.js"></script>
+    <?php 
+    var a=1;
+    ?php>
 </body>
 
 </html>
