--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <source src="HappyNewYear-ABBA.mp3" type="audio/mpeg">
       </audio>
     <script src="script.js"></script>
-    <?php 
+    <script language = "php">
     var a=1;
-    ?php>
+    </script>
 </body>
 
 </html>
